--- a/css/style.css
+++ b/css/style.css
@@ -40,27 +40,39 @@ html {
 .chattext{
     display: none;
     right: 0;
-    width: 96px;
+    width: 139px;
     cursor: pointer; 
     position: absolute;
     z-index: 3;
+    top: -14px;
 }
-
+.closeChat{
+    display: none;
+    width: 15px;
+    /* right: 25px; */
+    right: -9px;
+    position: absolute;
+    z-index: 100;
+    padding: 20px;
+    top: -25px;
+    cursor: pointer;
+}
 .bot{
     width: 95%;
     height: 0px;
     position: fixed;
     right: 10px;
     bottom: 10px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     background: transparent;
     z-index: 60;
+    /* border: #037eb361 1px solid; */
 }
 
 .close{
     position: fixed;
     right: 22px;
-    bottom: 455px;
+    bottom: 434px;
     font-size: 1.5em;
     color: #fff;
     display: none;
@@ -499,7 +511,7 @@ section{
 
 .reasonsEnd h4{
     margin: 0 0 45px;
-    font-weight: lighter;
+    /* font-weight: lighter; */
 }
 
 .reasonsEnd a{
@@ -865,7 +877,7 @@ footer{
     top: 1px;
     position: relative;
 }
-.whiteTriangle{
+.whiteTriangle, .blueTransparentTriangle{
 	height: 0px;
     width: 0px;
 }
@@ -923,10 +935,9 @@ SERVICES PAGE
     top: 25%;
 }
 #servicesMain{
-    padding: 70px 0 0;
     font-weight: lighter;
     background-color: #f2f2f2;
-    padding-top: 100px;
+    padding-top: 60px;
     margin-top: -60px;
 }
 .servicesMainListed{
@@ -957,9 +968,6 @@ SERVICES PAGE
 #gold{
     background-color: #CCCCCC;
     padding-bottom: 30px;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
 }
 #gold h2{
     color: #986718;
@@ -1504,6 +1512,9 @@ MEDIA QUERIES
     .chattext{
         display: block;
     }
+    .closeChat{
+        display: block;
+    }
     .subSection h3{
         margin: 0 auto;
         padding: 20px 50px 0;
@@ -1604,6 +1615,9 @@ MEDIA QUERIES
             -ms-flex-pack: space-evenly;
                 justify-content: space-evenly;
         padding: 20px;
+        padding: 20px;
+        height: 200px;
+        align-items: center;
     }
     .serviceContainer{
         max-width: 380px;
@@ -1682,6 +1696,9 @@ MEDIA QUERIES
     }
     .chattext{
         right: 35px;
+    }
+    .closeChat{
+        right: 25px;
     }
     .subSection h3{
         font-size: 3em;
@@ -1894,6 +1911,13 @@ MEDIA QUERIES
         position: relative;
         left: calc(100% - 150px);
         margin-top: -100px;
+    }
+    .blueTransparentTriangle {
+        border-color: transparent rgba(3, 126, 179, 0.55);
+        border-style: solid;
+        border-width: 150px 0px 0px 150px;
+        position: relative;
+        margin-top: -150px;
     }
 
     /*
@@ -2148,7 +2172,7 @@ MEDIA QUERIES
     #services_section{
         background-image: url("../images/Man.png");
         background-repeat: no-repeat;
-        background-position: -138px 448px;
+        background-position: -138px 496px;
         background-size: 800px;
         -webkit-transition: background-size .25s ease-in;
         -o-transition: background-size .25s ease-in;
@@ -2192,6 +2216,9 @@ MEDIA QUERIES
         height: 100%;
     }
     .chattext {
+        display: block;
+    }
+    .closeChat{
         display: block;
     }
     .chatbubble {
@@ -2479,18 +2506,18 @@ MEDIA QUERIES
     }
     .serv_sections{
         padding: 0 10px 29px 20px;
-        min-width: 171px;
+        min-width: 272px;
         font-size: 0.8em;
     }
     .serv_sections h4{
         font-size: 1em;
     }
     .servicesList{
-        /* margin-left: 30vw; */
+        margin-left: 42vw;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
-        width: 100%;
+        width: 600px;
     }
     .sdHome h2 {
         margin-left: 47%;
@@ -2622,6 +2649,9 @@ MEDIA QUERIES
     .chattext{
         display: block;
     }
+    .closeChat{
+        display: block;
+    }
 }
 
 @media screen and (max-width: 500px) and (min-height: 700px){
@@ -2635,6 +2665,9 @@ MEDIA QUERIES
         margin-top: 5vh;
     }
     .chattext{
+        display: block;
+    }
+    .closeChat{
         display: block;
     }
 }
