--- a/css/style.css
+++ b/css/style.css
@@ -319,13 +319,13 @@ section{
     font-weight: lighter;
 }
 .subSection{
-    margin-left: auto;
+    /* margin-left: auto; */
     text-align: left;
     margin-bottom: 50px;
 }
 
 .subSection h3{
-    margin: 60px 20px 0 20px;
+    margin: 10px 20px 0 20px;
     font-size: 2em;
     text-align: left;
     font-weight: lighter;
@@ -336,7 +336,7 @@ section{
 }
 
 .services_main{
-    margin: 20px;
+    margin: 0 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -363,7 +363,7 @@ section{
     margin: 5px 5px 5px 10px;
 }
 .serv_sections ul li{
-    padding: 5px 0;
+    padding: 2px 0;
 }
 .servicesList{
     display: -webkit-box;
@@ -1684,6 +1684,9 @@ MEDIA QUERIES
     .main_heading h1 {
         font-size: 5.5em;
     }
+    .shape {
+        top: 15%;
+    }
     #services_section h2 {
         font-size: 4.5em;
         -webkit-transition: font-size .25s ease-in;
@@ -1703,7 +1706,7 @@ MEDIA QUERIES
         -webkit-transition: width .20s ease-in;
         -o-transition: width .20s ease-in;
         transition: width .20s ease-in;
-        padding-bottom: 20px;
+        /* padding-bottom: 20px; */
         width: 500px;
     }
 
@@ -1718,10 +1721,10 @@ MEDIA QUERIES
         right: 25px;
     }
     .subSection h3{
-        font-size: 3em;
+        font-size: 2em;
         text-align: left;
         margin: 0;
-        max-width: 300px;
+        max-width: 200px;
         padding: 0 0 0 30px;
     }
     .services_main{
@@ -1733,7 +1736,7 @@ MEDIA QUERIES
         font-size: 1.2em;
     }
     .serv_sections{
-        padding: 0 10px 30px 30px;
+        padding: 0 10px 15px 30px;
         min-width: 171px;
     }
     .serv_sections a:hover{
@@ -1866,9 +1869,9 @@ MEDIA QUERIES
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
-        padding: 50px;
         margin: auto;
         width: 558px;
+        padding: 0 50px 50px;
     }
     #clients_section h2 {
         font-size: 2.5em;
@@ -1942,7 +1945,7 @@ MEDIA QUERIES
 
     /*
 
-    SERVICES SECTION
+    SERVICES PAGE
 
     */
 
@@ -1976,6 +1979,11 @@ MEDIA QUERIES
     }
     .servicesMainListed ul {
         min-width: 220px;
+    }
+    #chooseNetworkSubHead {
+        font-weight: lighter;
+        text-align: left;
+        padding-top: 0;
     }
     /*
     SD-WAN PAGE
@@ -2192,7 +2200,7 @@ MEDIA QUERIES
     #services_section{
         background-image: url("../images/Man.png");
         background-repeat: no-repeat;
-        background-position: -138px 496px;
+        background-position: -138px 341px;
         background-size: 800px;
         -webkit-transition: background-size .25s ease-in;
         -o-transition: background-size .25s ease-in;
@@ -2204,7 +2212,7 @@ MEDIA QUERIES
         -o-transition: font-size .25s ease-in;
         transition: font-size .25s ease-in;
         margin-left: -10vw;
-        max-width: 523px;
+        max-width: 571px;
         -webkit-box-ordinal-group: 2;
             -ms-flex-order: 1;
                 order: 1;
@@ -2218,7 +2226,7 @@ MEDIA QUERIES
         -webkit-box-ordinal-group: 4;
             -ms-flex-order: 3;
                 order: 3;
-        padding: 20px;
+        padding: 0 20px;
         width: 566px;
     }
     .subSection p {
@@ -2231,6 +2239,7 @@ MEDIA QUERIES
         -webkit-box-ordinal-group: 3;
             -ms-flex-order: 2;
                 order: 2;
+        margin-top: 15px;
     }
     .TFMLogo{
         height: 100%;
@@ -2491,6 +2500,9 @@ MEDIA QUERIES
     .main_heading{
         font-size: 1em;
     }
+    .shape {
+        top: 11%;
+    }
     #services_section{
         font-size: 1em;
         -webkit-transition: font-size .20s ease-in;
@@ -2498,7 +2510,7 @@ MEDIA QUERIES
         transition: font-size .20s ease-in;
         background: url("../images/Man.png");
         background-repeat: no-repeat;
-        background-position: -142px 545px;
+        background-position: -142px 402px;
         background-size: 867px;
         /* background-attachment: fixed; */
         -webkit-transition: background-size .25s ease-in;
@@ -2527,8 +2539,11 @@ MEDIA QUERIES
         margin-left: 0;
         margin-bottom: 100px;
     }
+    .subSection h3{
+        padding: 0;
+    }
     .serv_sections{
-        padding: 0 10px 29px 20px;
+        padding: 0 10px 15px 20px;
         min-width: 272px;
         font-size: 0.8em;
     }
@@ -2536,11 +2551,12 @@ MEDIA QUERIES
         font-size: 1em;
     }
     .servicesList{
-        margin-left: 42vw;
+        margin-left: 45vw;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
-        width: 600px;
+        width: 550px;
+        padding: 0;
     }
     .sdHome h2 {
         margin-left: 47%;
