--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html {
 .chat{
     position: fixed;
     right: 30px;
-    top: 70vh;
+    top: 50vh;
     height: 80px;
     display: block;
     z-index: 100;
@@ -156,8 +156,9 @@ section{
 }
 
 #home_section{
-    height: 100%;
-    min-height: 100vh;
+    min-height: 100%;
+    max-height: 100vh;
+    height: 100vh;
     background-color: black;
     overflow: hidden;
     position: relative;
@@ -189,7 +190,7 @@ section{
 }
 
 .main_heading h1{
-    font-size: 3.3em;
+    font-size: 2.7em;
     padding-bottom: 10px;
 }
 
@@ -202,7 +203,8 @@ section{
     max-width: 100%;
     height: auto;
     position: absolute;
-    top: 92vh;
+    /* top: 92vh; */
+    top: 83vh;
     -webkit-transform: translateY(-180%);
         -ms-transform: translateY(-180%);
             transform: translateY(-180%);
@@ -214,7 +216,8 @@ section{
 
 #heading_bottom p{
     position: absolute;
-    top: 80vh;
+    /* top: 80vh; */
+    top: 70vh;
     -webkit-transform: translateY(-100%);
         -ms-transform: translateY(-100%);
             transform: translateY(-100%);
@@ -790,6 +793,7 @@ footer{
 }
 .footerCont p{
     font-weight: lighter;
+    width: 120px;
 }
 .footerCont a{
     font-weight: lighter;
@@ -1241,9 +1245,6 @@ NEWS PAGE
 .newsContent h5{
     font-weight: lighter;
 }
-.newschat{
-    top: 62vh;
-}
 .profileImg{
     height: 200px;
     padding: 10px;
@@ -1292,6 +1293,9 @@ NEWS PAGE
 }
 .tutorials h5{
     padding: 20px 20px 50px;
+}
+.newsLogo{
+    margin-top: 10vh;
 }
 
 /*
@@ -1485,6 +1489,7 @@ POLICY PAGe
 
 
 
+
 /*
 
 MEDIA QUERIES
@@ -1492,9 +1497,30 @@ MEDIA QUERIES
 */
 
 
+@media screen and (max-width: 350px) and (max-height: 600px){
+    .main_heading h1{
+        font-size: 2.7em;
+    }
+}
+
+@media screen and (min-width: 375px){
+    .main_heading h1{
+        font-size: 2.7em;
+    }
+    .chat{
+        top: 58vh;
+    }
+    .newsLogo{
+        margin-top: 10vh;
+    }
+}
+
 @media screen and (min-width: 500px){
     .bot{
         width: 400px;
+    }
+    .main_heading h1 {
+        font-size: 3.6em;
     }
     .main_heading h2 {
         font-size: 3.6em;
@@ -1508,10 +1534,12 @@ MEDIA QUERIES
         height: 60px;
     }
     #heading_bottom p {
-        left: 49.5%;
+        left: 46%;
+        top: 80vh;
     }
     #dropDown{
-        left: 50%;
+        left: 47%;
+        top: 92vh;
     }
     .services_main{
         font-size: 1.2em;
@@ -1621,6 +1649,9 @@ MEDIA QUERIES
     .services h1{
         font-size: 4.2em;
     }
+    .chat{
+        top: 70vh;
+    }
     /*
     SERVICES PAGE
     */
@@ -1683,6 +1714,12 @@ MEDIA QUERIES
     */
     .termsHead h1 {
         font-size: 4em;
+    }
+    .newschat{
+        top: 62vh;
+    }
+    .newsHead h3{
+        padding-left: 0;
     }
 } 
 
@@ -1774,8 +1811,8 @@ MEDIA QUERIES
     #overview_section{
         background: url(../images/Girl.png);
         background-repeat: no-repeat;
-        background-position: -106px 439px;
-        background-size: 541px;
+        background-position: -27px 439px;
+        background-size: 400px;
         -webkit-transition: background-size .25s ease-in;
         -o-transition: background-size .25s ease-in;
         transition: background-size .25s ease-in;
@@ -2125,6 +2162,9 @@ MEDIA QUERIES
     .hamburger, .hamburgerBlack{
         display: none;
     }
+    #heading_bottom p {
+        left: 46.5%;
+    }
     .header_menu{
         display: -webkit-box;
         display: -ms-flexbox;
@@ -2205,8 +2245,8 @@ MEDIA QUERIES
     #services_section{
         background-image: url("../images/Man.png");
         background-repeat: no-repeat;
-        background-position: -138px 341px;
-        background-size: 800px;
+        background-position: -25px 392px;
+        background-size: 626px;
         -webkit-transition: background-size .25s ease-in;
         -o-transition: background-size .25s ease-in;
         transition: background-size .25s ease-in;
@@ -2307,7 +2347,7 @@ MEDIA QUERIES
         height: 130px;
     }
     #overview_section{
-        background-position: -50px 352px;
+        background-position: 1px 352px;
     }
     #overview_section h2 {
         font-size: 4em;
@@ -2448,26 +2488,20 @@ MEDIA QUERIES
         padding: 0;
     }
     #aboutMainDescription{
-        background: url(../images/Girl.png);
+        background: url(../images/Girlmirrored.png);
         background-repeat: no-repeat;
-        background-position: 0 0;
-        background-size: 541px;
+        background-position: 600px 62px;
+        background-size: 400px;
         -webkit-transition: background-size .25s ease-in;
         -o-transition: background-size .25s ease-in;
         transition: background-size .25s ease-in;
         background-color: #037eb3;
-        -webkit-transform: scaleX(-1);
-            -ms-transform: scaleX(-1);
-                transform: scaleX(-1);
     }
     .aboutIntro {
         background-color: #037eb3ba;
         height: 100%;
         padding-bottom: 50px;
         margin-bottom: -20px;
-        -webkit-transform: scaleX(-1);
-            -ms-transform: scaleX(-1);
-                transform: scaleX(-1);
     }
     /*
     NEWS PAGE
@@ -2515,8 +2549,8 @@ MEDIA QUERIES
         transition: font-size .20s ease-in;
         background: url("../images/Man.png");
         background-repeat: no-repeat;
-        background-position: -142px 402px;
-        background-size: 867px;
+        background-position: -7px 425px;
+        background-size: 642px;
         /* background-attachment: fixed; */
         -webkit-transition: background-size .25s ease-in;
         -o-transition: background-size .25s ease-in;
@@ -2570,8 +2604,8 @@ MEDIA QUERIES
         margin: 0 0 10px 47%;
     }
     #overview_section {
-        background-position: -1px 393px;
-        background-size: 695px;
+        background-position: 46px 466px;
+        background-size: 450px;
     }
     #overviewCont {
         -webkit-box-pack: center;
@@ -2673,6 +2707,16 @@ MEDIA QUERIES
     .aboutIntro {
         padding-left: 10%;
     }
+    #aboutMainDescription{
+        background: url(../images/Girlmirrored.png);
+        background-repeat: no-repeat;
+        background-position: 706px 62px;
+        background-size: 400px;
+        -webkit-transition: background-size .25s ease-in;
+        -o-transition: background-size .25s ease-in;
+        transition: background-size .25s ease-in;
+        background-color: #037eb3;
+    }
     /*
     TERMS PAGe
     */
@@ -2696,6 +2740,9 @@ MEDIA QUERIES
 @media screen and (min-height: 550px){
     .TFMlogo_heading {
         margin-top: 3vh;
+    }
+    .newsLogo{
+        margin-top: 10vh;
     }
     .chattext{
         display: block;
@@ -2749,7 +2796,7 @@ MEDIA QUERIES
 
 @media screen and (max-width: 700px) and (max-height: 700px){
     .main_heading h1{
-        font-size: 3em;
+        /* font-size: 3em; */
         -webkit-transition: font-size .25s ease-in;
         -o-transition: font-size .25s ease-in;
         transition: font-size .25s ease-in;
@@ -2759,3 +2806,5 @@ MEDIA QUERIES
         font-size: 2.5em;
     }
 }
+
+
