--- a/css/style.css
+++ b/css/style.css
@@ -1490,6 +1490,11 @@ MEDIA QUERIES
         font-size: 2.7em;
     }
 }
+@media screen and (min-width: 360px) and (min-height: 700px){
+    .chat{
+        top:74vh;
+    }
+}
 
 @media screen and (min-width: 375px){
     .main_heading h1{
@@ -2701,7 +2706,7 @@ MEDIA QUERIES
         padding-left: 10%;
     }
     #aboutMainDescription{
-        background: url(../images/Girlmirrored.png);
+        background: url(../images/Girlmirrored1.png);
         background-repeat: no-repeat;
         background-position: 706px 62px;
         background-size: 400px;
@@ -2779,6 +2784,9 @@ MEDIA QUERIES
     }
     #heading_bottom p {
         top: 82vh;
+    }
+    #dropDown{
+        top: 90vh;
     }
 }
 
